<resources>
    <string name="app_name">XO Game</string>
    <string name="action_settings">Settings</string>
    <string name="error_user_exists">user existed</string>
    <string name="error_invalid_email">email invalid</string>
    <string name="error_weak_password">weak password</string>
    <string name="auth_failed">auth failed</string>
    <string name="txtName">name</string>
    <string name="txtGamesPlayed">games played</string>
    <string name="txtWon">Won</string>
    <string name="txtLost">Lost</string>
    <string name="txtDraw">Draw</string>
    <string name="error_email_empty">Email can not be empty.</string>
    <string name="txtLogin">Login user</string>
    <string name="btnLogin">Login</string>
    <string name="btnForget">Forget Password</string>
    <string name="btnLoginCreate">Not a member Yet ? Sign*up Here!</string>
    <string name="cbShowPass">Show Password</string>
    <string name="txtItmPlyName">name</string>
    <string name="txtItmPlyGameCount">game count</string>
    <string name="txtItmPlyWin">game win</string>
    <string name="txtItmPlyLoss">game loss</string>
    <string name="txtItmPlyGameDraw">game draw</string>
    <string name="title_login">Login</string>
    <string name="chkLoginShowPassword">Show password</string>
    <string name="btnLoginForgotPassword">Forgot password</string>
    <string name="txtGamePlayer1">Player 1</string>
    <string name="txt_Statistic">statistics</string>
    <string name="txtGamePlayer2">player 2</string>
    <string name="turnGameTime">timer</string>
    <string name="msg_game_invitation_rejected">Invited you to play</string>
    <string name="Disagree">refuse</string>
    <string name="Accept">Accept</string>
    <string name="Title">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Game_Invite">Game invite</string>
</resources>
