<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/lined_paper_background"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:id="@+id/txtLoginGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#59000000"
        android:shadowDx="1.8369701987210297e-16"
        android:shadowDy="3"
        android:shadowRadius="7"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="46.4sp"
        tools:text="XO Game "
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


<TextView
        android:id="@+id/txtLoginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLoginGameTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/title_login"
        android:textColor="@color/warm_purple"
        android:textSize="28.1sp"
    />

    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/login_button"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:text="@string/btnLogin"
        android:textColor="#ffffff"
        android:textSize="28.1sp"
        android:layout_below="@+id/lolinLoginPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnLoginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLoginCreate"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/btnLoginForgotPassword"
        android:textColor="#000000"
        android:textSize="16.9sp"
        />

    <Button
        android:id="@+id/btnLoginCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btnLoginCreate"
        android:textColor="#000000"
        android:textSize="16.9sp"
        />

    <LinearLayout
        android:id="@+id/lolinLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLoginLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imgLoginEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/e_mail_design"/>

        <EditText
            android:id="@+id/txtLoginEmail"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lolinLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lolinLoginEmail"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/lolinLoginPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imgLoginPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password_design"/>

            <EditText
                android:id="@+id/txtLoginPassword"
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/chkLoginShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkLoginShowPassword"
            android:textColor="#000000"
            android:textSize="12.2sp" />

        <CheckBox
            android:id="@+id/saveLoginCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember me"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>